WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
246457
IPC::MessageSender::sendWithAsyncReply is not consistent with send failures
https://bugs.webkit.org/show_bug.cgi?id=246457
Summary
IPC::MessageSender::sendWithAsyncReply is not consistent with send failures
Kimmo Kinnunen
Reported
2022-10-13 06:49:48 PDT
IPC::MessageSender::sendWithAsyncReply is not consistent with send failures When send fails, the MessageSender code has already added a pending async reply.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2022-10-13 06:50:33 PDT
<
rdar://problem/101124692
>
Kimmo Kinnunen
Comment 2
2022-10-13 07:08:02 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/5329
EWS
Comment 3
2022-10-26 04:31:01 PDT
Committed
256008@main
(b43d9276ab01): <
https://commits.webkit.org/256008@main
> Reviewed commits have been landed. Closing PR #5329 and removing active labels.
Alex Christensen
Comment 4
2022-10-29 13:37:51 PDT
This broke these API tests: TestWebKitAPI.IPCTestingAPI.CanInterceptFindString TestWebKitAPI.IPCTestingAPI.CanInterceptHasStorageAccess
Alex Christensen
Comment 5
2022-10-29 18:08:57 PDT
https://github.com/WebKit/WebKit/pull/5940
fixes the test, though I'm not sure how the fuzzer will handle the interception of messages with replies now.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug